--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -15,7 +15,6 @@ body {
   font-style: normal;
 }
 
-/*==========COMPL==========*/
 *,
 *::before,
 *::after {
@@ -56,53 +55,80 @@ img {
   margin: 0 auto;
 }
 
-.header-address-link:hover,
-.header-address-link:focus,
-.navigation-list-link:hover,
-.navigation-list-link:focus {
+.header .container {
+  display: flex;
+  align-items: center;
+}
+
+.hero .container {
+  padding-top: 200px;
+  padding-bottom: 200px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.features .container {
+  display: block;
+}
+
+.footer .container {
+  padding: 60px 15px;
+  display: flex;
+  align-items: center;
+}
+
+.header-address-link {
+  display: flex;
+  align-items: center;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.02em;
+  color: #757575;
+  text-decoration: none;
+  align-items: center;
+  fill: currentColor;
+  width: 161px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.header-address-link:hover, .header-address-link:focus {
   color: #2196f3;
   fill: #2196f3;
 }
 
-.header-address-link,
+li:hover .header-address-link {
+  color: #2196f3;
+}
+
 .navigation-list-link {
-  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  color: #757575;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.navigation-list-link:hover, .navigation-list-link:focus {
+  color: #2196f3;
+  fill: #2196f3;
+}
+
 .header {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   width: 1600px;
   height: 80px;
   border: 1px solid #ececec;
 }
 
-.header .container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
 .navigation {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
 }
 
 .navigation-list {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
 
@@ -121,12 +147,8 @@ img {
 }
 
 .address-list {
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
   display: inline-flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   margin-left: auto;
   font-size: 14px;
   font-weight: 500;
@@ -138,39 +160,16 @@ img {
   margin-left: 50px;
 }
 
-.header-address-link {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 16px;
-  letter-spacing: 0.02em;
-  color: #757575;
-  text-decoration: none;
-  align-items: center;
-  fill: currentColor;
-  width: 161px;
-}
-
-.address .navigation-list {
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  color: #757575;
-}
-
 .header-envelope-icon {
   width: 16px;
   height: 12px;
   margin-right: 10px;
   fill: #757575;
-  -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+li:hover .header-envelope-icon {
+  fill: #2196f3;
 }
 
 .header-smartphone-icon {
@@ -178,20 +177,11 @@ img {
   height: 16px;
   margin-right: 10px;
   fill: #757575;
-  -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 li:hover .header-smartphone-icon {
   fill: #2196f3;
-}
-
-li:hover .header-envelope-icon {
-  fill: #2196f3;
-}
-
-li:hover .header-address-link {
-  color: #2196f3;
 }
 
 main {
@@ -213,26 +203,19 @@ main {
   background-color: #f5f4fa;
   border: 0px;
   cursor: pointer;
-  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.btn-filters:hover,
-.btn-filters:focus {
+.btn-filters:hover, .btn-filters:focus {
   color: #ffffff;
   background-color: #2196f3;
-  -webkit-box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-          box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 /*============FILTERS===========*/
 .list-btn {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  justify-content: center;
   margin-bottom: 34px;
 }
 
@@ -262,11 +245,8 @@ main {
 }
 
 .aside-list {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  flex-wrap: wrap;
 }
 
 .aside-list-item {
@@ -285,21 +265,13 @@ main {
   margin-bottom: 0px;
 }
 
-.aside-list-item:hover,
-.aside-list-item:focus {
+.aside-list-item:hover, .aside-list-item:focus {
   background: #ffffff;
-  -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-          box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .accent-img {
   position: relative;
-}
-
-.aside-list-link:hover .aside-text-accent,
-.aside-list-link:focus .aside-text-accent {
-  -webkit-transform: translateY(0);
-          transform: translateY(0);
 }
 
 .accent-img {
@@ -328,12 +300,13 @@ main {
   height: 100%;
   background: rgba(33, 150, 243, 0.9);
   opacity: 0;
-  -webkit-transform: translatey(100%);
-          transform: translatey(100%);
-  -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transform: translatey(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.aside-list-link:hover .aside-text-accent,
+.aside-list-link:focus .aside-text-accent {
+  transform: translateY(0);
 }
 
 .aside-list:hover .aside-text-accent,
@@ -349,17 +322,9 @@ main {
   background-color: #2f303a;
 }
 
-.footer .container {
-  padding: 60px 15px;
-}
-
 .address-footer {
   font-style: normal;
   margin-top: 20px;
-}
-
-.footer-list-item:not(:first-child) {
-  margin-top: 9px;
 }
 
 .footer-list-item {
@@ -369,21 +334,16 @@ main {
   letter-spacing: 0.03em;
 }
 
+.footer-list-item:not(:first-child) {
+  margin-top: 9px;
+}
+
 .footer-link-item {
   color: #ffffff;
 }
 
 .footer-link {
   color: rgba(255, 255, 255, 0.6);
-}
-
-.footer .container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
 }
 
 .footer-title {
@@ -400,36 +360,24 @@ main {
 }
 
 .social-list-footer {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  justify-content: space-between;
   width: 206px;
   margin-top: 20px;
 }
 
 .social-list-link-footer {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
   width: 44px;
   height: 44px;
   border-radius: 50%;
   background-color: rgba(255, 255, 255, 0.1);
-  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.social-list-link-footer:hover,
-.social-list-link-footer:focus {
+.social-list-link-footer:hover, .social-list-link-footer:focus {
   background-color: #2196f3;
 }
 
@@ -440,12 +388,8 @@ main {
 }
 
 .footer-form-wrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   min-width: 570px;
   height: 86px;
   margin-left: 93px;
@@ -475,10 +419,8 @@ main {
   width: 358px;
   height: 50px;
   border: 1px solid rgba(255, 255, 255, 0.3);
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  -webkit-filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-          filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  box-sizing: border-box;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
   background-color: transparent;
   padding-left: 16px;
@@ -492,17 +434,19 @@ main {
   width: 200px;
   height: 50px;
   background: #2196f3;
-  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   border: none;
   cursor: pointer;
   margin-left: 12px;
+  position: relative;
+}
+
+.btn-footer-form:focus {
+  outline: none;
 }
 
 .footer-btn-text {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   font-family: "roboto", sans-serif;
   font-style: normal;
@@ -512,14 +456,6 @@ main {
   letter-spacing: 0.06em;
   color: #ffffff;
   margin-left: 29px;
-}
-
-.btn-footer-form {
-  position: relative;
-}
-
-.btn-footer-form:focus {
-  outline: none;
 }
 
 .footer-btn-svg {
