--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -2,6 +2,9 @@ body {
   font-family: $main-font;
   font-style: normal;
 }
+body.modal-open {
+  overflow: hidden;
+}
 *,
 *::before,
 *::after {
@@ -25,8 +28,17 @@ a {
 }
 img {
   display: block;
+  max-width: 100%;
+  height: auto;
 }
 .section {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+@media screen and (min-width: 1200px) {
+  .section {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
