--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -5,7 +5,6 @@
   line-height: 1.19;
   letter-spacing: 0.03em;
   color: #000000;
-  margin-right: 93px;
 
   &-caption {
     color: $accent-color;
@@ -17,6 +16,6 @@
     line-height: 1.19;
     letter-spacing: 0.03em;
     color: #ffffff;
-    margin-bottom: 20px;
+    margin-top: 60px;
   }
 }
