--- a/sass/components/_line-header.scss
+++ b/sass/components/_line-header.scss
@@ -4,7 +4,7 @@
     content: '';
     display: block;
     position: absolute;
-    bottom: 2px;
+    bottom: -28px;
     width: 100%;
     height: 4px;
     background: $accent-color;
@@ -19,10 +19,40 @@
     content: '';
     display: block;
     position: absolute;
-    bottom: 2px;
+    bottom: -28px;
     width: 100%;
     height: 4px;
     background: $accent-color;
     border-radius: 2px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .studio {
+    position: relative;
+    &::after {
+      content: '';
+      display: block;
+      position: absolute;
+      bottom: -32px;
+      width: 100%;
+      height: 4px;
+      background: $accent-color;
+      border-radius: 2px;
+    }
+  }
+
+  .portfolio {
+    position: relative;
+
+    &::after {
+      content: '';
+      display: block;
+      position: absolute;
+      bottom: -32px;
+      width: 100%;
+      height: 4px;
+      background: $accent-color;
+      border-radius: 2px;
+    }
   }
 }
