--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -5,7 +5,6 @@
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
-
   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   &.is-hidden {
@@ -19,8 +18,9 @@
 
 .modal {
   position: absolute;
-  width: 528px;
-  height: 581px;
+  max-width: 450px;
+  height: 609px;
+  width: 100%;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
@@ -53,35 +53,37 @@
 .icon-btn-close {
   width: 11px;
   height: 11px;
+  fill: #000000;
 
   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   .btn-close:hover &,
   .btn-close:focus & {
-    fill: &accent-color;
+    fill: $accent-color;
   }
 }
 
 .contact-form {
-  width: 448px;
+  width: 370px;
   height: 342px;
   margin: 0 auto;
 }
 .form-title {
   font-weight: bold;
   font-size: 20px;
-  line-height: 1.15;
+  line-height: 1.5;
   text-align: center;
   letter-spacing: 0.03em;
 
   color: #212121;
   margin-top: 40px;
   margin-bottom: 12px;
+  margin-right: 10px;
 }
 
 .form-input {
   display: block;
-  width: 448px;
+  width: 370px;
   height: 40px;
 
   border: 1px solid rgba(33, 33, 33, 0.2);
@@ -104,14 +106,26 @@
   letter-spacing: 0.01em;
 
   color: $subtitle-color;
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   &:not(:first-child) {
     padding-top: 10px;
   }
+  &:hover,
+  &:focus {
+    color: $accent-color;
+  }
 }
 
 .form-comment {
-  width: 448px;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.01em;
+
+  color: rgba(117, 117, 117, 0.5);
+
+  width: 370px;
   height: 120px;
 
   border: 1px solid rgba(33, 33, 33, 0.2);
@@ -133,8 +147,8 @@
   font-family: $main-font;
   font-style: normal;
   font-weight: normal;
-  font-size: 14px;
-  line-height: 1.71;
+  font-size: 12px;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   text-decoration-line: underline;
 
@@ -176,8 +190,8 @@
   font-family: $main-font;
   font-style: normal;
   font-weight: normal;
-  font-size: 14px;
-  line-height: 1.71;
+  font-size: 12px;
+  line-height: 1.17;
   letter-spacing: 0.03em;
 
   color: $subtitle-color;
@@ -191,17 +205,15 @@
     border: 2px solid #000000;
     border-radius: 2px;
     margin-right: 7px;
-
-    .form-checkbox:checked + & {
-      background-image: url(../images/modal/icon-check.svg);
-      background-position: center;
-      background-size: cover;
-      background-color: $accent-color;
-      border: none;
-    }
   }
 }
-
+.form-checkbox:checked + .modal-checkbox-label::before {
+  background-image: url(../images/modal/icon-check.svg);
+  background-position: center;
+  background-size: cover;
+  background-color: var(--accent-color);
+  border: none;
+}
 /*============FORM-SVG========*/
 .contact-form-wrapper {
   display: block;
@@ -213,10 +225,263 @@
   top: 50%;
   left: 12px;
   transform: translateY(-50%);
+  fill: #212121;
 
   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-  .form-input:focus + & {
+  .form-input:focus ~ & {
     fill: $accent-color;
   }
 }
+@media screen and (min-width: 1200px) {
+  .modal {
+    min-width: 528px;
+    height: 581px;
+  }
+  .contact-form {
+    min-width: 448px;
+    height: 342px;
+    width: 100%;
+    padding-left: 40px;
+    padding-right: 40px;
+  }
+  .form-input {
+    min-width: 448px;
+    height: 40px;
+  }
+  .form-comment {
+    width: 448px;
+    height: 120px;
+  }
+  .contract-link {
+    font-size: 14px;
+    line-height: 1.71;
+  }
+
+  .modal-checkbox-label {
+    font-size: 14px;
+    line-height: 1.71;
+  }
+}
+// .backdrop {
+//   position: fixed;
+//   top: 0;
+//   left: 0;
+//   width: 100%;
+//   height: 100%;
+//   background-color: rgba(0, 0, 0, 0.5);
+
+//   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+//   &.is-hidden {
+//     opacity: 0;
+//     visibility: hidden;
+//     pointer-events: none;
+
+//     transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1) 250ms;
+//   }
+// }
+
+// .modal {
+//   position: absolute;
+//   width: 528px;
+//   height: 581px;
+//   top: 50%;
+//   left: 50%;
+//   transform: translate(-50%, -50%) scale(1);
+//   background: #ffffff;
+//   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+//     0px 2px 1px rgba(0, 0, 0, 0.2);
+//   border-radius: 4px;
+
+//   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1) 250ms;
+
+//   .backdrop.is-hidden & {
+//     transform: translate(-50%, -50%) scale(1.1);
+//     transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1) 0;
+//   }
+// }
+
+// .btn-close {
+//   position: absolute;
+//   width: 30px;
+//   height: 30px;
+//   border-radius: 50%;
+//   border: 1px solid rgba(0, 0, 0, 0.1);
+//   background-color: transparent;
+//   top: 8px;
+//   right: 8px;
+//   cursor: pointer;
+//   outline: none;
+// }
+
+// .icon-btn-close {
+//   width: 11px;
+//   height: 11px;
+
+//   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+//   .btn-close:hover &,
+//   .btn-close:focus & {
+//     fill: $accent-color;
+//   }
+// }
+
+// .contact-form {
+//   width: 448px;
+//   height: 342px;
+//   margin: 0 auto;
+// }
+// .form-title {
+//   font-weight: bold;
+//   font-size: 20px;
+//   line-height: 1.15;
+//   text-align: center;
+//   letter-spacing: 0.03em;
+
+//   color: #212121;
+//   margin-top: 40px;
+//   margin-bottom: 12px;
+// }
+
+// .form-input {
+//   display: block;
+//   width: 448px;
+//   height: 40px;
+
+//   border: 1px solid rgba(33, 33, 33, 0.2);
+//   border-radius: 4px;
+//   padding-left: 42px;
+//   margin-top: 4px;
+
+//   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+//   &:focus {
+//     outline: none;
+//     border: 1px solid $accent-color;
+//   }
+// }
+// .form-label {
+//   display: block;
+//   font-weight: normal;
+//   font-size: 12px;
+//   line-height: 1.17;
+//   letter-spacing: 0.01em;
+
+//   color: $subtitle-color;
+
+//   &:not(:first-child) {
+//     padding-top: 10px;
+//   }
+// }
+
+// .form-comment {
+//   width: 448px;
+//   height: 120px;
+
+//   border: 1px solid rgba(33, 33, 33, 0.2);
+//   border-radius: 4px;
+//   margin-bottom: 20px;
+//   margin-top: 4px;
+//   padding: 12px 16px;
+//   resize: none;
+
+//   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+//   &:focus {
+//     outline: none;
+//     border: 1px solid $accent-color;
+//   }
+// }
+
+// .contract-link {
+//   font-family: $main-font;
+//   font-style: normal;
+//   font-weight: normal;
+//   font-size: 14px;
+//   line-height: 1.71;
+//   letter-spacing: 0.03em;
+//   text-decoration-line: underline;
+
+//   color: $accent-color;
+// }
+// .form-checkbox {
+//   margin-bottom: 30px;
+// }
+
+// .btn-form {
+//   font-family: $main-font;
+//   font-style: normal;
+//   font-weight: bold;
+//   font-size: 16px;
+//   line-height: 1.88;
+//   letter-spacing: 0.06em;
+
+//   color: #ffffff;
+
+//   display: block;
+//   width: 200px;
+//   height: 50px;
+//   background: $accent-color;
+//   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+//   border-radius: 4px;
+//   border: none;
+//   margin: 0 auto;
+//   cursor: pointer;
+//   margin-top: 30px;
+
+//   &:focus {
+//     outline: none;
+//   }
+// }
+
+// .modal-checkbox-label {
+//   display: inline-flex;
+//   align-items: center;
+//   font-family: $main-font;
+//   font-style: normal;
+//   font-weight: normal;
+//   font-size: 14px;
+//   line-height: 1.71;
+//   letter-spacing: 0.03em;
+
+//   color: $subtitle-color;
+
+//   &::before {
+//     display: inline-flex;
+//     align-items: center;
+//     content: '';
+//     width: 16px;
+//     height: 15px;
+//     border: 2px solid #000000;
+//     border-radius: 2px;
+//     margin-right: 7px;
+
+//     .form-checkbox:checked + & {
+//       background-image: url(../images/modal/icon-check.svg);
+//       background-position: center;
+//       background-size: cover;
+//       background-color: $accent-color;
+//       border: none;
+//     }
+//   }
+// }
+
+// /*============FORM-SVG========*/
+// .contact-form-wrapper {
+//   display: block;
+//   position: relative;
+// }
+
+// .modal-form-svg {
+//   position: absolute;
+//   top: 50%;
+//   left: 12px;
+//   transform: translateY(-50%);
+
+//   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+//   .form-input:focus + & {
+//     fill: $accent-color;
+//   }
+// }
