--- a/sass/layout/_customers.scss
+++ b/sass/layout/_customers.scss
@@ -1,33 +1,72 @@
 .customers {
-  width: 1600px;
-  height: 370px;
+  @media screen and (max-width: 480px) {
+    min-width: 480px;
+    width: 480px;
+  }
 
   &-title {
     font-weight: bold;
-    font-size: 36px;
-    line-height: 1.17;
     text-align: center;
     letter-spacing: 0.03em;
-    margin-bottom: 50px;
 
     color: $title-color;
+    @media screen and (max-width: 1199px) {
+      font-size: 28px;
+      line-height: 1.18;
+      margin-bottom: 30px;
+    }
+    @media screen and (min-width: 1200px) {
+      font-size: 36px;
+      line-height: 1.17;
+      margin-bottom: 50px;
+    }
   }
   &-list {
-    display: flex;
+    @media screen and (max-width: 1199px) {
+      display: flex;
+      flex-wrap: wrap;
+    }
+    @media screen and (min-width: 1200px) {
+      display: flex;
+    }
   }
   &-item {
-    width: 170px;
-    height: 90px;
-    &:not(:last-child) {
+    @media screen and (max-width: 767px) {
+      &:nth-child(2n + 1) {
+        margin-right: 30px;
+        width: 210px;
+        height: 90px;
+      }
+      &:nth-child(-n + 4) {
+        margin-bottom: 30px;
+      }
+    }
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
       margin-right: 30px;
+      width: 226px;
+      height: 90px;
+
+      &:nth-child(3n + 3) {
+        margin-right: 0px;
+      }
+
+      &:nth-child(-n + 4) {
+        margin-bottom: 30px;
+      }
+    }
+    @media screen and (min-width: 1200px) {
+      width: 170px;
+      height: 90px;
+      &:not(:last-child) {
+        margin-right: 30px;
+      }
     }
   }
   &-link {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 170px;
-    height: 90px;
+
     border: 1px solid #afb1b8;
     border-radius: 4px;
     fill: #afb1b8;
@@ -39,11 +78,21 @@
       fill: $accent-color;
       border-color: $accent-color;
     }
+    @media screen and (max-width: 767px) {
+      width: 210px;
+      height: 90px;
+    }
+    @media screen and(min-width:768px) and (max-width: 1199px) {
+      width: 226px;
+      height: 90px;
+    }
+    @media screen and (min-width: 1200px) {
+      width: 170px;
+      height: 90px;
+    }
   }
 }
 .customers-svg {
-  width: 170px;
-  height: 90px;
   border-radius: 1px;
   .customers-item:nth-of-type(1) & {
     width: 44px;
@@ -94,3 +143,102 @@
     height: 45px;
   }
 }
+@media screen and (min-width: 768px) {
+}
+
+// .customers {
+//   width: 1600px;
+//   height: 370px;
+
+//   &-title {
+//     font-weight: bold;
+//     font-size: 36px;
+//     line-height: 1.17;
+//     text-align: center;
+//     letter-spacing: 0.03em;
+//     margin-bottom: 50px;
+
+//     color: $title-color;
+//   }
+//   &-list {
+//     display: flex;
+//   }
+//   &-item {
+//     width: 170px;
+//     height: 90px;
+//     &:not(:last-child) {
+//       margin-right: 30px;
+//     }
+//   }
+//   &-link {
+//     display: flex;
+//     justify-content: center;
+//     align-items: center;
+//     width: 170px;
+//     height: 90px;
+//     border: 1px solid #afb1b8;
+//     border-radius: 4px;
+//     fill: #afb1b8;
+
+//     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
+//       border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+//     &:hover,
+//     &:focus {
+//       fill: $accent-color;
+//       border-color: $accent-color;
+//     }
+//   }
+// }
+// .customers-svg {
+//   width: 170px;
+//   height: 90px;
+//   border-radius: 1px;
+//   .customers-item:nth-of-type(1) & {
+//     width: 44px;
+//     height: 49px;
+//   }
+//   .customers-item:nth-of-type(2) & {
+//     width: 40px;
+//     height: 52px;
+//   }
+//   .customers-item:nth-of-type(3) & {
+//     width: 41px;
+//     height: 42px;
+//   }
+//   .customers-item:nth-of-type(4) & {
+//     width: 79px;
+//     height: 42px;
+//   }
+//   .customers-item:nth-of-type(5) & {
+//     width: 59px;
+//     height: 47px;
+//   }
+//   .customers-item:nth-of-type(6) & {
+//     width: 88px;
+//     height: 45px;
+//   }
+//   .customers-item:nth-of-type(1) & {
+//     width: 44px;
+//     height: 49px;
+//   }
+//   .customers-item:nth-of-type(2) & {
+//     width: 40px;
+//     height: 52px;
+//   }
+//   .customers-item:nth-of-type(3) & {
+//     width: 41px;
+//     height: 42px;
+//   }
+//   .customers-item:nth-of-type(4) & {
+//     width: 79px;
+//     height: 42px;
+//   }
+//   .customers-item:nth-of-type(5) & {
+//     width: 59px;
+//     height: 47px;
+//   }
+//   .customers-item:nth-of-type(6) & {
+//     width: 88px;
+//     height: 45px;
+//   }
+// }
