--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,14 +1,15 @@
 .footer {
-  display: block;
-  margin: 0 auto;
-  width: 1600px;
-  height: 252px;
+  text-align: center;
   background-color: #2f303a;
+  @media screen and (max-width: 480px) {
+    min-width: 480px;
+    width: 480px;
+    width: 100%;
+  }
 }
 
 .address-footer {
   font-style: normal;
-  margin-top: 20px;
 }
 
 .footer-list-item {
@@ -37,15 +38,15 @@
 
   color: #ffffff;
 }
-.footer-box {
-  margin-right: 70px;
-}
+
 .social-list-footer {
   display: flex;
-  justify-content: space-between;
-  width: 206px;
+  justify-content: center;
 
   margin-top: 20px;
+}
+.social-list-item:not(:last-child) {
+  margin-right: 10px;
 }
 .social-list-link-footer {
   display: flex;
@@ -70,16 +71,10 @@
 }
 
 .footer-form-wrapper {
-  display: flex;
-  align-items: center;
-  min-width: 570px;
-  height: 86px;
-  margin-left: 93px;
+  display: block;
+  text-align: center;
 }
 
-.footer-wrapper {
-  display: block;
-}
 .footer-form-title {
   font-weight: bold;
   font-size: 14px;
@@ -88,7 +83,9 @@
   text-transform: uppercase;
 
   color: #ffffff;
-  margin-bottom: 20px;
+}
+.form-footer {
+  margin-top: 20px;
 }
 .footer-input {
   font-family: $main-font;
@@ -98,8 +95,6 @@
   line-height: 1.25;
   color: rgba(255, 255, 255, 0.6);
 
-  width: 358px;
-  height: 50px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   box-sizing: border-box;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
@@ -113,7 +108,7 @@
 }
 
 .btn-footer-form {
-  width: 200px;
+  min-width: 200px;
   height: 50px;
   background: $accent-color;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
@@ -147,3 +142,259 @@
   right: 28px;
   fill: #ffffff;
 }
+@media screen and (max-width: 767px) {
+  .footer {
+    height: 603px;
+    &-box {
+      padding-top: 60px;
+    }
+    &-input {
+      width: 450px;
+      height: 50px;
+    }
+    &-wrapper {
+      display: block;
+      width: 450px;
+      height: 156px;
+      margin: 0 auto;
+    }
+    &-icon {
+      margin-top: 60px;
+    }
+  }
+  &-form-wrapper {
+    margin-top: 60px;
+  }
+  .footer-form-title {
+    margin-top: 60px;
+  }
+  .address-footer {
+    margin-top: 20px;
+  }
+  .btn-footer-form {
+    margin-top: 20px;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .footer {
+    height: 463px;
+    &-box {
+      padding-top: 60px;
+    }
+    .container {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-around;
+    }
+    &-input {
+      max-width: 450;
+      height: 50px;
+      width: 100%;
+      margin-top: 20px;
+    }
+    &-icon {
+      margin-top: 60px;
+    }
+    &-form-wrapper {
+      margin-top: 60px;
+    }
+  }
+  .address-footer {
+    margin-top: 20px;
+  }
+  .form-footer {
+    width: 450px;
+    height: 156px;
+    margin: 0 auto;
+  }
+  .btn-footer-form {
+    margin-bottom: 60px;
+    margin-top: 20px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer {
+    .container {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      height: 252px;
+    }
+    &-input {
+      width: 358px;
+      height: 50px;
+      width: 100%;
+    }
+    &-box {
+      text-align: start;
+    }
+  }
+  .form-footer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 50px;
+  }
+  .footer-wrapper {
+    min-width: 570px;
+  }
+  .footer-form-title {
+    text-align: start;
+  }
+  .footer-btn-svg {
+    position: absolute;
+    top: 13px;
+    right: 28px;
+    fill: #ffffff;
+  }
+}
+
+// .footer {
+//   display: block;
+//   margin: 0 auto;
+//   width: 1600px;
+//   height: 252px;
+//   background-color: #2f303a;
+// }
+
+// .address-footer {
+//   font-style: normal;
+//   margin-top: 20px;
+// }
+
+// .footer-list-item {
+//   font-weight: normal;
+//   font-size: 14px;
+//   line-height: 1.71;
+//   letter-spacing: 0.03em;
+
+//   &:not(:first-child) {
+//     margin-top: 9px;
+//   }
+// }
+// .footer-link-item {
+//   color: #ffffff;
+// }
+// .footer-link {
+//   color: rgba(255, 255, 255, 0.6);
+// }
+
+// .footer-title {
+//   font-weight: bold;
+//   font-size: 14px;
+//   line-height: 1.14;
+//   letter-spacing: 0.03em;
+//   text-transform: uppercase;
+
+//   color: #ffffff;
+// }
+// .footer-box {
+//   margin-right: 70px;
+// }
+// .social-list-footer {
+//   display: flex;
+//   justify-content: space-between;
+//   width: 206px;
+
+//   margin-top: 20px;
+// }
+// .social-list-link-footer {
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+//   width: 44px;
+//   height: 44px;
+//   border-radius: 50%;
+//   background-color: rgba(255, 255, 255, 0.1);
+
+//   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+//   &:hover,
+//   &:focus {
+//     background-color: $accent-color;
+//   }
+// }
+
+// .social-list-svg-footer {
+//   width: 20px;
+//   height: 20px;
+//   fill: #ffffff;
+// }
+
+// .footer-form-wrapper {
+//   display: flex;
+//   align-items: center;
+//   min-width: 570px;
+//   height: 86px;
+//   margin-left: 93px;
+// }
+
+// .footer-wrapper {
+//   display: block;
+// }
+// .footer-form-title {
+//   font-weight: bold;
+//   font-size: 14px;
+//   line-height: 1.14;
+//   letter-spacing: 0.03em;
+//   text-transform: uppercase;
+
+//   color: #ffffff;
+//   margin-bottom: 20px;
+// }
+// .footer-input {
+//   font-family: $main-font;
+//   font-style: normal;
+//   font-weight: normal;
+//   font-size: 16px;
+//   line-height: 1.25;
+//   color: rgba(255, 255, 255, 0.6);
+
+//   width: 358px;
+//   height: 50px;
+//   border: 1px solid rgba(255, 255, 255, 0.3);
+//   box-sizing: border-box;
+//   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+//   border-radius: 4px;
+//   background-color: transparent;
+//   padding-left: 16px;
+
+//   &:focus {
+//     outline: none;
+//   }
+// }
+
+// .btn-footer-form {
+//   width: 200px;
+//   height: 50px;
+//   background: $accent-color;
+//   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+//   border-radius: 4px;
+//   border: none;
+//   cursor: pointer;
+//   margin-left: 12px;
+
+//   position: relative;
+
+//   &:focus {
+//     outline: none;
+//   }
+// }
+// .footer-btn-text {
+//   display: flex;
+//   font-family: $main-font;
+//   font-style: normal;
+//   font-weight: bold;
+//   font-size: 16px;
+//   line-height: 1.88;
+//   letter-spacing: 0.06em;
+
+//   color: #ffffff;
+//   margin-left: 29px;
+// }
+
+// .footer-btn-svg {
+//   position: absolute;
+//   top: 13px;
+//   right: 28px;
+//   fill: #ffffff;
+// }
