--- a/sass/layout/_our-team.scss
+++ b/sass/layout/_our-team.scss
@@ -1,19 +1,21 @@
 .team {
-  background: #f5f4fa;
-
-  &-title {
-    font-weight: bold;
-    font-size: 36px;
-    line-height: 1.17;
-    text-align: center;
-    letter-spacing: 0.03em;
-    margin-bottom: 50px;
-
-    color: $title-color;
+  @media screen and (max-width: 480px) {
+    min-width: 480px;
+    width: 480px;
+    width: 100%;
   }
 
-  &-list {
-    display: flex;
+  display: block;
+  background: #f5f4fa;
+  text-align: center;
+  &-title {
+    font-weight: bold;
+    font-size: 28px;
+    line-height: 1.18;
+    text-align: center;
+    letter-spacing: 0.03em;
+    margin-bottom: 30px;
+    color: #212121;
   }
   &-list-title {
     font-weight: 500;
@@ -23,16 +25,16 @@
     color: $title-color;
     margin-bottom: 10px;
   }
+  &-list-img {
+    margin-bottom: 30px;
+  }
   &-list-subtitle {
     font-weight: normal;
     font-size: 16px;
     line-height: 1.19;
     letter-spacing: 0.03em;
-    margin-bottom: 30px;
+    margin-bottom: 16px;
     color: $subtitle-color;
-  }
-  &-list-img {
-    margin-bottom: 30px;
   }
 }
 .team-list-item {
@@ -40,10 +42,92 @@
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
   text-align: center;
-  width: 270px;
-  max-height: 428px;
+  background-color: #ffffff;
+}
+@media screen and (max-width: 767px) {
+  .team-list-item:not(:last-child) {
+    margin-bottom: 30px;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .team-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  .team-list-item {
+    width: 354px;
+  }
+  .team-list-item:nth-child(2n) {
+    margin-left: 30px;
+  }
+  .team-list-item:nth-child(-n + 2) {
+    margin-bottom: 30px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .team-title {
+    font-size: 36px;
+    line-height: 1.17;
+    margin-bottom: 50px;
 
-  &:not(:last-child) {
+    color: $title-color;
+  }
+
+  .team-list {
+    display: flex;
+  }
+
+  .team-list-item:not(:last-child) {
     margin-right: 30px;
   }
 }
+// .team {
+//   background: #f5f4fa;
+
+//   &-title {
+//     font-weight: bold;
+//     font-size: 36px;
+//     line-height: 1.17;
+//     text-align: center;
+//     letter-spacing: 0.03em;
+//     margin-bottom: 50px;
+
+//     color: $title-color;
+//   }
+
+//   &-list {
+//     display: flex;
+//   }
+//   &-list-title {
+//     font-weight: 500;
+//     font-size: 16px;
+//     line-height: 1.19;
+//     letter-spacing: 0.03em;
+//     color: $title-color;
+//     margin-bottom: 10px;
+//   }
+//   &-list-subtitle {
+//     font-weight: normal;
+//     font-size: 16px;
+//     line-height: 1.19;
+//     letter-spacing: 0.03em;
+//     margin-bottom: 30px;
+//     color: $subtitle-color;
+//   }
+//   &-list-img {
+//     margin-bottom: 30px;
+//   }
+// }
+// .team-list-item {
+//   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+//     0px 2px 1px rgba(0, 0, 0, 0.2);
+//   border-radius: 0px 0px 4px 4px;
+//   text-align: center;
+//   width: 270px;
+//   max-height: 428px;
+
+//   &:not(:last-child) {
+//     margin-right: 30px;
+//   }
+// }
