--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -111,7 +111,7 @@
   &:not(:first-child) {
     padding-top: 10px;
   }
-  &:hover,
+
   &:focus {
     color: $accent-color;
   }
@@ -205,15 +205,17 @@
     border: 2px solid #000000;
     border-radius: 2px;
     margin-right: 7px;
+
+    .form-checkbox:checked + & {
+      background-image: url(../images/modal/icon-check.svg);
+      background-position: center;
+      background-size: cover;
+      background-color: var(--accent-color);
+      border: none;
+    }
   }
 }
-.form-checkbox:checked + .modal-checkbox-label::before {
-  background-image: url(../images/modal/icon-check.svg);
-  background-position: center;
-  background-size: cover;
-  background-color: var(--accent-color);
-  border: none;
-}
+
 /*============FORM-SVG========*/
 .contact-form-wrapper {
   display: block;
