--- a/sass/layout/_aside.scss
+++ b/sass/layout/_aside.scss
@@ -1,3 +1,10 @@
+.aside {
+  @media screen and (max-width: 480px) {
+    min-width: 480px;
+    width: 480px;
+    width: 100%;
+  }
+}
 .aside-title {
   font-weight: bold;
   font-size: 18px;
@@ -17,32 +24,6 @@
   margin-bottom: 20px;
   margin-left: 24px;
 }
-.aside-list {
-  display: flex;
-  flex-wrap: wrap;
-
-  &-item {
-    display: block;
-    width: 370px;
-    margin-right: 30px;
-    margin-bottom: 30px;
-    position: relative;
-
-    &:nth-child(3n) {
-      margin-right: 0px;
-    }
-    &:nth-last-child(-n + 3) {
-      margin-bottom: 0px;
-    }
-    &:hover,
-    &:focus {
-      background: #ffffff;
-      box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
-        0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-    }
-  }
-}
-
 .accent-img {
   position: relative;
 }
@@ -58,10 +39,7 @@
   color: #ffffff;
 
   position: absolute;
-  top: 63px;
   left: 24px;
-  width: 322px;
-  min-height: 168px;
 }
 .aside-text-accent {
   display: inline-block;
@@ -84,3 +62,164 @@
     opacity: 1;
   }
 }
+@media screen and (max-width: 767px) {
+  .aside {
+    .container {
+      max-width: 450px;
+      display: block;
+      margin: 0 auto;
+      width: 100%;
+    }
+  }
+
+  .text-accent {
+    top: 77px;
+    bottom: 77px;
+  }
+  .aside-list {
+    display: inline-block;
+    &-item:hover,
+    &-item:focus {
+      background: #ffffff;
+      box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
+        0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+    }
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .aside-list {
+    display: flex;
+    flex-wrap: wrap;
+    &-item:hover,
+    &-item:focus {
+      background: #ffffff;
+      box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
+        0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+    }
+  }
+  .aside-list-item:nth-child(odd) {
+    margin-right: 30px;
+  }
+  .aside-list-item:not(:last-child) {
+    margin-bottom: 30px;
+  }
+  .text-accent {
+    top: 49px;
+    bottom: 49px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .aside-list {
+    display: flex;
+    flex-wrap: wrap;
+    &-item {
+      margin-right: 30px;
+      margin-bottom: 30px;
+      &:nth-child(3n) {
+        margin-right: 0px;
+      }
+      &:nth-last-child(-n + 3) {
+        margin-bottom: 0px;
+      }
+      &:hover,
+      &:focus {
+        background: #ffffff;
+        box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
+          0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+      }
+    }
+  }
+  .text-accent {
+    top: 63px;
+    bottom: 63px;
+  }
+}
+
+// .aside-title {
+//   font-weight: bold;
+//   font-size: 18px;
+//   line-height: 2;
+//   letter-spacing: 0.06em;
+//   color: $title-color;
+//   margin-bottom: 4px;
+//   margin-left: 24px;
+//   margin-top: 20px;
+// }
+// .subtitle-item {
+//   font-weight: normal;
+//   font-size: 16px;
+//   line-height: 1.88;
+//   letter-spacing: 0.03em;
+//   color: $subtitle-color;
+//   margin-bottom: 20px;
+//   margin-left: 24px;
+// }
+// .aside-list {
+//   display: flex;
+//   flex-wrap: wrap;
+
+//   &-item {
+//     display: block;
+//     width: 370px;
+//     margin-right: 30px;
+//     margin-bottom: 30px;
+//     position: relative;
+
+//     &:nth-child(3n) {
+//       margin-right: 0px;
+//     }
+//     &:nth-last-child(-n + 3) {
+//       margin-bottom: 0px;
+//     }
+//     &:hover,
+//     &:focus {
+//       background: #ffffff;
+//       box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
+//         0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+//     }
+//   }
+// }
+
+// .accent-img {
+//   position: relative;
+// }
+
+// .accent-img {
+//   overflow: hidden;
+// }
+// .text-accent {
+//   font-weight: normal;
+//   font-size: 18px;
+//   line-height: 1.56;
+//   letter-spacing: 0.03em;
+//   color: #ffffff;
+
+//   position: absolute;
+//   top: 63px;
+//   left: 24px;
+//   width: 322px;
+//   min-height: 168px;
+// }
+// .aside-text-accent {
+//   display: inline-block;
+//   position: absolute;
+//   top: 0;
+//   left: 0;
+//   width: 100%;
+//   height: 100%;
+//   background: rgba(33, 150, 243, 0.9);
+//   opacity: 0;
+
+//   transform: translatey(100%);
+//   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+//   .aside-list-link:hover &,
+//   .aside-list-link:focus & {
+//     transform: translateY(0);
+//   }
+//   .aside-list:hover &,
+//   .aside-list:focus & {
+//     opacity: 1;
+//   }
+// }
