--- a/sass/layout/_filters.scss
+++ b/sass/layout/_filters.scss
@@ -1,3 +1,11 @@
+.filters {
+  @media screen and (max-width: 480px) {
+    min-width: 480px;
+    width: 480px;
+    width: 100%;
+  }
+}
+
 .btn-filters {
   font-family: $main-font;
   font-style: normal;
@@ -23,13 +31,69 @@
       0px 2px 2px rgba(0, 0, 0, 0.12);
   }
 }
-
-/*============FILTERS===========*/
-.list-btn {
-  display: flex;
-  justify-content: center;
-  margin-bottom: 34px;
-  &-item:not(:last-child) {
+@media screen and (max-width: 767px) {
+  .list-btn {
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: 40px;
+  }
+  .list-btn-item:not(:last-child) {
     margin-right: 8px;
   }
+  .list-btn-item:nth-child(-n + 3) {
+    margin-bottom: 15px;
+  }
 }
+
+@media screen and (min-width: 768px) {
+  .list-btn {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 30px;
+    &-item:not(:last-child) {
+      margin-right: 8px;
+    }
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .list-btn {
+    margin-bottom: 50px;
+  }
+}
+
+// .btn-filters {
+//   font-family: $main-font;
+//   font-style: normal;
+//   font-weight: 500;
+//   font-size: 16px;
+//   line-height: 1.63;
+//   text-align: center;
+//   letter-spacing: 0.03em;
+//   padding: 6px 22px;
+//   color: $title-color;
+//   border-radius: 4px;
+//   background-color: #f5f4fa;
+//   border: 0px;
+//   cursor: pointer;
+
+//   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+//     color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+//   &:hover,
+//   &:focus {
+//     color: #ffffff;
+//     background-color: $accent-color;
+//     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+//       0px 2px 2px rgba(0, 0, 0, 0.12);
+//   }
+// }
+
+// /*============FILTERS===========*/
+// .list-btn {
+//   display: flex;
+//   justify-content: center;
+//   margin-bottom: 34px;
+//   &-item:not(:last-child) {
+//     margin-right: 8px;
+//   }
+// }
