--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -83,7 +83,8 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-
+    padding-top: 200px;
+    padding-bottom: 200px;
     &-title {
       font-size: 44px;
       line-height: 1.36;
